# chatgpt

./: .gitignore  README.md  README.zh-CN.md
chatgpt-api/: .env.example  Dockerfile  README.md  app_code_dump.txt  auth.py  pyproject.toml
chatgpt-api/alembic/: env.py
chatgpt-api/alembic/versions/: 02e1d389d3e0_catch_new_change.py  25de16557100_reinit_the_final_version_schema.py  6706fc8b0643_update_user_name_to_username_for_user_.py  818a96fc64fc_init_users_conversations_and_messages_.py  8f6d12a598ee_init.py  fd4f409b8d29_add_user_id_and_index.py
chatgpt-api/app/: main.py
chatgpt-api/app/api/v1/: auth.py  chat.py  conversation.py  conversations.py  user.py
chatgpt-api/app/core/: config.py  constants.py  enums.py  exception_handlers.py  logging_config.py
chatgpt-api/app/db/: __init__.py  session.py
chatgpt-api/app/exceptions/: app.py  app_error.py  http.py  http_exceptions.py
chatgpt-api/app/llm/: __init__.py  agent.py  tools.py
chatgpt-api/app/models/: __init__.py  base.py  conversation.py  conversations.py  message.py  messages.py  user.py  users.py
chatgpt-api/app/schemas/: __init__.py  chat.py  conversation.py  message.py  token.py  user.py
chatgpt-api/app/services/: auth.py  chat.py  security.py  user.py
chatgpt-api/tests/: conftest.py
chatgpt-api/tests/api/: test_api_chat.py  test_api_conversation.py  test_api_user.py
chatgpt-api/tests/llm/: test_llm_agent.py  test_llm_tools.py
chatgpt-api/tests/services/: test_service_security.py  test_services_chat.py  test_services_user.py
chatgpt-web/: .eslintrc.js  package-lock.json  package.json
chatgpt-web/src/api/: client.tsx  errors.tsx  gptApi.tsx  types.tsx
chatgpt-web/src/app/: globals.css  layout.tsx  page.tsx
chatgpt-web/src/app/chat/: page.tsx
chatgpt-web/src/app/fake-chat/: page.tsx
chatgpt-web/src/app/login/: page.tsx
chatgpt-web/src/app/register/: page.tsx
chatgpt-web/src/components/: ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  ErrorInfo.tsx  MessageBubble.tsx  Sidebar.tsx  UserPanel.tsx  WelcomeScreen.tsx
chatgpt-web/src/components/ui/: LockIcon.tsx  (+3 more)
chatgpt-web/src/contexts/: AuthContext.tsx  ThemeContext.tsx
chatgpt-web/src/hooks/: useChat.tsx  useConversations.tsx
chatgpt-web/src/libs/: stream.tsx  utils.ts
(+1 files in other folders)
