[project]
name = "chatgpt-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.118.0",
    "passlib>=1.7.4",
    "pydantic-ai[all]>=1.0.12",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
]
