[project]
name = "chatgpt-api"
version = "0.1.0"
src = ["app"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "ddgs>=9.6.0",
    "fastapi[standard]>=0.118.0",
    "httpx==0.28.1",
    "markitdown>=0.1.3",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.12",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "sqlalchemy[asyncio]>=2.0.43",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"

[tool.black]
line-length = 300
target-version = ['py312']

[tool.ruff]
line-length = 300
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
